--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     def rxJavaVersion = '2.1.1'
     def roomVersion = '2.2.6'
     def navVersion = '2.3.3'
-    def preferencesVersion = '1.1.1  '
+    def preferencesVersion = '1.1.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -88,6 +88,6 @@ dependencies {
     implementation "com.android.support:palette-v7:$supportVersion"
     implementation "com.android.support:design:$supportVersion"
 
-    implementation "androidx.preference:preference-ktx:$preferencesVersion"
+    implementation "androidx.preference:preference:$preferencesVersion"
 
 }
